fixed menu overflow

--- a/style.css
+++ b/style.css
@@ -653,7 +653,6 @@ object {
 body {
 	font-size:1.5em;
 	line-height:1.231;
-	overflow: hidden;
 	max-width: 900px;
 	margin: 0 auto;
 	/*color: black;*/
@@ -694,9 +693,6 @@ div {
 	margin-left: 25px;
 }
 
-.site-header hr{
-	width: 120%;
-}
 .hr {
 	border-top: 1px solid #D1D1D1;
 	margin: 10px 0;
@@ -752,9 +748,6 @@ h2.comments-title {
 	text-align: center;
 }
 
-footer.site-footer {
-	margin-top: 100px;
-}
 
 .archive .page-header h1, .entry-header{
 	font-size: 2em;
@@ -785,7 +778,7 @@ footer.site-footer {
 	float:left;
 	position:relative;
 	line-height: 1.5em;
-
+	z-index: 99999999;
 }
 
 .menu li ul {
